--- a/index1.html
+++ b/index1.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Wine Shop</title>
-  <link rel="stylesheet" href="styles1.css">
+  <link rel="stylesheet" href="style1.css">
   <script defer src="script1.js"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
